<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="io.incepted.cryptoaddresstracker.viewModels.OverviewViewModel" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_normal"
        android:layout_marginRight="@dimen/spacing_normal"
        android:layout_marginBottom="@dimen/spacing_normal"
        app:cardCornerRadius="@dimen/card_small_radius"
        app:cardElevation="@dimen/card_xsmall_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/spacing_normal">


            <LinearLayout
                android:id="@+id/overview_frag_balance_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/overview_frag_balance"
                    style="@style/TextMediumLargeBoldAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    app:double_text="@{viewmodel.mAddress.get().remoteAddressInfo.ethBalanceInfo.balance}" />


                <TextView
                    android:id="@+id/overview_frag_balance_unit"
                    style="@style/TextMediumSemiBoldAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_xxsmall"
                    android:text="@string/eth" />
            </LinearLayout>

            <TextView
                android:id="@+id/overview_frag_basecurrency_value"
                style="@style/TextSecondaryAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:base_currency_price="@{viewmodel.mCurrentPrice.get().price}"
                app:base_currency_symbol="@{viewmodel.mCurrentPrice.get().tsym}"
                app:eth_balance="@{viewmodel.mAddress.get().remoteAddressInfo.ethBalanceInfo.balance}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview_frag_balance_container" />


            <TextView
                android:id="@+id/overview_frag_basecurrency_rate"
                style="@style/TextSecondaryAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{`(1 ETH = ` + viewmodel.mCurrentPrice.get().formattedPriceAndSymbol + `)`}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview_frag_basecurrency_value" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="@dimen/spacing_normal"
                android:background="@color/text_color_secondary_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overview_frag_basecurrency_rate" />

            <TextView
                android:id="@+id/overview_frag_total_received_dummy"
                style="@style/TextMediumRegularAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/total_received"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/overview_frag_total_sent_dummy"
                style="@style/TextMediumRegularAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:text="@string/total_sent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overview_frag_total_received_dummy" />

            <TextView
                android:id="@+id/overview_frag_total_txs"
                style="@style/TextMediumRegularAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:text="@string/of_transactions"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overview_frag_total_sent_dummy" />

            <TextView
                android:id="@+id/overview_frag_total_received"
                style="@style/TextMediumSemiBoldAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:double_text="@{viewmodel.mAddress.get().remoteAddressInfo.ethBalanceInfo.totalIn}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/overview_frag_total_received_dummy" />


            <TextView
                android:id="@+id/overview_frag_total_sent"
                style="@style/TextMediumSemiBoldAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:double_text="@{viewmodel.mAddress.get().remoteAddressInfo.ethBalanceInfo.totalOut}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/overview_frag_total_sent_dummy" />


            <TextView
                android:id="@+id/overview_frag_total"
                style="@style/TextMediumSemiBoldAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:double_text="@{viewmodel.mAddress.get().remoteAddressInfo.countTxs}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/overview_frag_total_txs" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>