<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_normal">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/nav_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:paddingBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="82dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ethicon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nav_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <!-- TODO Fix version info -->
        <TextView
            android:id="@+id/nav_version_info"
            style="@style/TextSecondaryAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/version_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_app_name" />

        <!-- TODO Fix version info -->
        <TextView
            android:id="@+id/nav_version_date"
            style="@style/TextSecondaryAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/last_update_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_version_info" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/nav_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_header">

        <TextView
            android:id="@+id/nav_content_header_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="8dp"
            style="@style/TextSmallBoldAppearance"/>

        <View
            android:id="@+id/nav_divider_line_1"
            android:layout_width="100dp"
            android:layout_height="0.5dp"
            android:background="@color/text_color_secondary_gray"
            app:layout_constraintTop_toBottomOf="@id/nav_content_header_address"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/nav_content_item_token_addresses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="ERC20 Token Addresses"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_divider_line_1"
            style="@style/TextMediumBoldAppearance"/>


        <TextView
            android:id="@+id/nav_content_item_scan_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Scan A Transaction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nav_content_item_token_addresses"
            style="@style/TextMediumBoldAppearance"/>


        <TextView
            android:id="@+id/nav_content_header_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Settings"
            app:layout_constraintTop_toBottomOf="@id/nav_content_item_scan_tx"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            style="@style/TextSmallBoldAppearance"/>

        <View
            android:id="@+id/nav_divider_line_3"
            android:layout_width="100dp"
            android:layout_height="0.5dp"
            android:background="@color/text_color_secondary_gray"
            app:layout_constraintTop_toBottomOf="@id/nav_content_header_settings"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="8dp"
            style="@style/TextMediumBoldAppearance"/>

        <TextView
            android:id="@+id/nav_content_item_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_divider_line_3"
            style="@style/TextMediumBoldAppearance" />





    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>